fix and improve comments for swagger
