# backend/docs/swagger.json
@@ -10,7 +10,7 @@
     "basePath": "/",
     "paths": {
         "/api/v1/auth/logout": {
-            "get": {
+            "delete": {
                 "description": "accept refresh token from cookie, and return empty tokens",
                 "produces": [
                     "application/json"
@@ -31,7 +31,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "response has emty accessToken",
                         "schema": {
                             "$ref": "#/definitions/v1.tokenResponse"
                         }
@@ -61,7 +61,7 @@
             "get": {
                 "security": [
                     {
-                        "AccessToken": []
+                        "bearerAuth": []
                     }
                 ],
                 "description": "return curent username",
@@ -179,6 +179,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/v1.tokenResponse"
+                        },
+                        "headers": {
+                            "Set-Cookie": {
+                                "type": "string",
+                                "description": "refreshToken. Example: \"RefreshToken=9838c59cff93e21; Path=/; Max-Age=2628000; HttpOnly; Secure; SameSite=None\" "
+                            }
                         }
                     },
                     "400": {
@@ -232,6 +238,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/v1.tokenResponse"
+                        },
+                        "headers": {
+                            "Set-Cookie": {
+                                "type": "string",
+                                "description": "refreshToken. Example: \"RefreshToken=9838c59cff93e21; Path=/; Max-Age=2628000; HttpOnly; Secure; SameSite=None\" "
+                            }
                         }
                     },
                     "400": {
@@ -255,7 +267,7 @@
                 }
             }
         },
-        "/api/v1/reset": {
+        "/api/v1/genpasrcode": {
             "post": {
                 "description": "generate and save password reset code into db. Sends code to email",
                 "produces": [
@@ -266,9 +278,20 @@
                 ],
                 "summary": "generate password reset code",
                 "operationId": "gen_pass_reset_code",
+                "parameters": [
+                    {
+                        "description": "email input",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/core.Email"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "password reset code saved in db and sent on specified email"
                     },
                     "401": {
                         "description": "Unauthorized",
@@ -301,10 +324,24 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "example@gmail.com"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "qwerty123456"
+                }
+            }
+        },
+        "core.Email": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "example@gmail.com"
                 }
             }
         },
@@ -334,7 +371,8 @@
             "type": "object",
             "properties": {
                 "accessToken": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOVCJ9.eyJleHAiONAwMDk5In0.s8hOQjBtA0"
                 }
             }
         },
@@ -348,7 +386,8 @@
         }
     },
     "securityDefinitions": {
-        "AccessToken": {
+        "bearerAuth": {
+            "description": "Enter the token with the `Bearer: ` prefix",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
